k8s-configs/ping-cloud/base/pingfederate/engine/cloud-generic/statefulset.yaml
#
# This defines the pingfederate runtime/engine statefulset.
#
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate
  labels:
    cluster: pingfederate-cluster
    role: pingfederate-engine
spec:
  selector:
    matchLabels:
      role: pingfederate-engine
  serviceName: pingfederate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingfederate-engine
      labels:
        cluster: pingfederate-cluster
        role: pingfederate-engine
        pod-reaper: enabled
      annotations:
        lastUpdateReason: "NA"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "8080"
        newrelic.io/scrape: "true"
    spec:
      serviceAccountName: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each PF runtime pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingfederate-engine
                topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: pingfederate
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-apps/pingfederate:pdo-10399
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        resources:
          requests:
            memory: "4Gi"
            cpu: 2
          limits:
            memory: "4Gi"
            cpu: 2
        volumeMounts:
        - name: ssh-dir
          mountPath: /home/ping/.ssh
        - name: shared-dir
          mountPath: /opt/shared-dir
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /opt/staging/hooks/logger.lib.sh
          subPath: logger.lib.sh
        - name: data-dir
          mountPath: /opt/staging/jmx_prometheus_javaagent-0.14.0.jar
          subPath: jmx_prometheus_javaagent-0.14.0.jar
        - name: data-dir
          mountPath: /opt/staging/newrelic.jar
          subPath: newrelic.jar
        - name: data-dir
          mountPath: /opt/staging/native-s3-ping.jar
          subPath: native-s3-ping.jar
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - mountPath: /etc/podinfo
          name: podinfo
        - name: data-dir
          mountPath: /opt/staging/solutions_artifacts
          subPath: solutions_artifacts
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pf-engine-readiness.sh ]
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pf-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        ports:
        - containerPort: 9031
        - containerPort: 8080
      - name: pingfederate-heartbeat-exporter
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
        image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/prometheus-json-exporter:v2.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8079
            name: pf-heartbeat
            protocol: TCP
        volumeMounts:
          - mountPath: /opt/config.yml
            subPath: config.yml
            name: pf-exporter-config
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 300Mi
      securityContext:
        fsGroup: 9999
      volumes:
      - name: podinfo
        downwardAPI:
          items:
            - path: labels
              fieldRef:
                fieldPath: metadata.labels
            - path: annotations
              fieldRef:
                fieldPath: metadata.annotations
            - path: cpu_limit
              resourceFieldRef:
                containerName: pingfederate
                divisor: 1m
                resource: limits.cpu
            - path: cpu_request
              resourceFieldRef:
                containerName: pingfederate
                divisor: 1m
                resource: requests.cpu
      - name: ssh-dir
        emptyDir: {}
      - name: shared-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingfederate-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
      - name: pf-exporter-config
        configMap:
          name: pf-exporter-config
          defaultMode: 0644
