k8s-configs/ping-cloud/base/pingfederate/engine/cloud-generic/service.yaml
#
# This service exposes the pingfederate runtime ports to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: pingfederate
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/"
    prometheus.io/port: "8079"
    newrelic.io/scrape: "true"
spec:
  ports:
  - port: 9031
    name: pingfederate-runtime
  - port: 8080
    name: metrics
  - port: 8079
    name: pf-heartbeat
  - port: 1812
    name: pf-radius-listener
  - port: 1813
    name: pf-radius-accounting
  selector:
    role: pingfederate-engine
