k8s-configs/ping-cloud/base/pingfederate/engine/cloud-generic/ingress.yaml
# This defines the ingress for the pingfederate authorization services.

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - pingfederate-dev.ping-demo.com
  rules:
  - host: pingfederate-dev.ping-demo.com
    http:
      paths:
      # This rule gives external access to the pingfederate AS endpoints
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingfederate
            port:
              number: 9031
